--- a/model_app/package.json
+++ b/model_app/package.json
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^4.9.1",
     "concurrently": "^5.3.0",
     "react-day-picker": "^7.4.8",
-    "react-dropdown-select": "^4.6.1"
+    "react-dropdown-select": "^4.6.1",
+    "react-unity-webgl": "^7.1.10"
   }
 }
