--- a/model_app/package.json
+++ b/model_app/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^5.3.0",
     "react-day-picker": "^7.4.8",
     "react-dropdown-select": "^4.6.1",
+    "react-scripts": "^4.0.3",
     "react-unity-webgl": "^8.1.3"
   }
 }
