--- a/model_app/package.json
+++ b/model_app/package.json
@@ -17,6 +17,7 @@
     "@emotion/core": "^10.1.1",
     "@material-ui/core": "^5.0.0-alpha.14",
     "@material-ui/icons": "^4.9.1",
+    "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "material-ui-popup-state": "^1.7.2",
     "react-day-picker": "^7.4.8",
