--- a/model_app/package.json
+++ b/model_app/package.json
@@ -9,7 +9,8 @@
     "server-install": "cd backend && npm i",
     "client": "npm start --prefix frontend",
     "client-install": "cd frontend && npm i",
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\""
+    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\"",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "concurrently": "^5.3.0",
     "react-day-picker": "^7.4.8",
     "react-dropdown-select": "^4.6.1",
+    "react-material-ui-carousel": "^2.2.1",
     "react-scripts": "^4.0.3",
     "react-unity-webgl": "^8.1.3"
   }
