--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -17,8 +18,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^4.0.3",
     "react-redux": "^7.2.0",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5",
