--- a/model_app/package.json
+++ b/model_app/package.json
@@ -1,33 +1,57 @@
 {
-  "name": "model_app",
-  "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "npm start --prefix backend",
-    "server-install": "cd backend && npm i",
-    "client": "npm start --prefix frontend",
-    "client-install": "cd frontend && npm i",
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\"",
-    "build": "webpack"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@emotion/core": "^10.1.1",
-    "@emotion/react": "^11.1.5",
-    "@material-ui/core": "^5.0.0-alpha.14",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "classnames": "^2.2.6",
-    "concurrently": "^5.3.0",
-    "material-ui-popup-state": "^1.7.2",
-    "react-bootstrap": "^1.5.2",
-    "react-day-picker": "^7.4.8",
-    "react-dropdown-select": "^4.6.1",
-    "react-material-ui-carousel": "^2.2.1",
+    "@material-ui/styles": "^4.10.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "dotenv": "^8.2.0",
+    "font-awesome": "^4.7.0",
+    "google-map-react": "^1.1.7",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-scripts": "^4.0.3",
-    "react-social": "^1.10.0",
-    "react-unity-webgl": "^8.1.3"
+    "react-redux": "^7.2.0",
+    "react-transition-group": "^4.3.0",
+    "reactstrap": "^8.4.1",
+    "recharts": "^1.8.5",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
+    "typescript": "~3.7.2",
+    "uuid": "^3.4.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "react-router-dom": "^5.2.0"
   }
 }
