--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -9,16 +9,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
     "google-map-react": "^1.1.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "^4.0.3",
     "react-redux": "^7.2.0",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5",
