--- a/model_app/package.json
+++ b/model_app/package.json
@@ -9,7 +9,7 @@
     "server-install": "cd backend && npm i",
     "client": "npm start --prefix frontend",
     "client-install": "cd frontend && npm i",
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\"",
+    "dev": "cd frontend && npm start",
     "build": "webpack"
   },
   "author": "",
