--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,8 +17,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^4.0.3",
+    "react-material-ui-carousel": "^2.3.1",
     "react-redux": "^7.2.0",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5",
