--- a/model_app/package.json
+++ b/model_app/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "d3": "^7.0.1",
+    "google-map-react": "^2.1.10",
     "material-ui-popup-state": "^1.7.2",
     "react-bootstrap": "^1.5.2",
     "react-day-picker": "^7.4.8",
