Default profile pictures now appear under blog posts in dev blog carousel

--- a/model_app/package.json
+++ b/model_app/package.json
@@ -16,16 +16,18 @@
   "license": "ISC",
   "dependencies": {
     "@emotion/core": "^10.1.1",
-    "@emotion/react": "^11.1.5",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-alpha.14",
     "@material-ui/icons": "^4.9.1",
+    "@mui/material": "^5.0.2",
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "material-ui-popup-state": "^1.7.2",
     "react-bootstrap": "^1.5.2",
     "react-day-picker": "^7.4.8",
     "react-dropdown-select": "^4.6.1",
-    "react-material-ui-carousel": "^2.2.1",
+    "react-material-ui-carousel": "^2.3.5",
     "react-scripts": "^4.0.3",
     "react-social": "^1.10.0",
     "react-unity-webgl": "^8.1.3"
