--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -13,7 +13,9 @@
     "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
-    "google-map-react": "^1.1.7",
+    "d3": "^7.0.1",
+    "google-map-react": "^2.1.10",
+    "material-ui-popup-state": "^1.7.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
