Moved frontend dependencies to ./frontend/package.json and removed unnecessary dependencies added in this branch

--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -18,6 +18,8 @@
     "react": "^16.13.1",
     "react-device-detect": "^1.17.0",
     "react-dom": "^16.13.1",
+    "material-ui-popup-state": "^1.7.2",
+    "react-material-ui-carousel": "^2.3.5",
     "react-redux": "^7.2.0",
     "react-scripts": "^4.0.3",
     "react-transition-group": "^4.3.0",
