--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -29,7 +29,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.0",
-    "typescript": "~4.4.4",
+    "typescript": "^4.4.4",
     "uuid": "^8.3.2"
   },
   "scripts": {
