--- a/model_app/package.json
+++ b/model_app/package.json
@@ -15,17 +15,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@emotion/core": "^10.1.1",
-    "@emotion/react": "^11.1.5",
-    "@material-ui/core": "^5.0.0-alpha.14",
-    "@material-ui/icons": "^4.9.1",
-    "classnames": "^2.2.6",
-    "concurrently": "^5.3.0",
-    "react-bootstrap": "^1.5.2",
-    "react-day-picker": "^7.4.8",
-    "react-dropdown-select": "^4.6.1",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.5.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "classnames": "^2.3.1",
+    "concurrently": "^6.3.0",
+    "react-bootstrap": "^1.6.4",
+    "react-day-picker": "^7.4.10",
+    "react-dropdown-select": "^4.7.4",
     "react-scripts": "^4.0.3",
     "react-social": "^1.10.0",
-    "react-unity-webgl": "^8.1.3"
+    "react-unity-webgl": "^8.5.1"
   }
 }
