--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -14,14 +17,14 @@
     "dotenv": "^10.0.0",
     "font-awesome": "^4.7.0",
     "google-map-react": "^2.1.10",
+    "material-ui-popup-state": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
-    "material-ui-popup-state": "^2.0.0",
     "react-material-ui-carousel": "^2.3.5",
     "react-redux": "^7.2.6",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "react-transition-group": "^4.4.2",
     "reactstrap": "^8.10.1",
     "recharts": "^2.1.6",
