--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -11,14 +11,20 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.3",
     "font-awesome": "^4.7.0",
     "google-map-react": "^2.1.10",
+    "install": "^0.13.0",
+    "material-ui-popup-state": "^2.0.0",
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "npm": "^8.5.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
-    "material-ui-popup-state": "^2.0.0",
     "react-material-ui-carousel": "^2.3.5",
     "react-redux": "^7.2.6",
     "react-scripts": "^4.0.3",
@@ -33,10 +39,11 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": "react-app"
