--- a/model_app/package.json
+++ b/model_app/package.json
@@ -15,12 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.0",
     "classnames": "^2.3.1",
     "concurrently": "^6.3.0",
     "react-bootstrap": "^1.6.4",
     "react-day-picker": "^7.4.10",
     "react-dropdown-select": "^4.7.4",
-    "react-scripts": "^5.0.0",
     "react-social": "^1.10.0",
     "react-unity-webgl": "^8.5.1"
   }
