--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.2.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
