--- a/model_app/package.json
+++ b/model_app/package.json
@@ -10,6 +10,7 @@
     "client": "npm start --prefix frontend",
     "client-install": "cd frontend && npm i",
     "dev": "cd frontend && npm start",
+    "start": "cd frontend && npm start",
     "build": "webpack"
   },
   "author": "",
