--- a/model_app/Dockerfile
+++ b/model_app/Dockerfile
@@ -1,6 +1,7 @@
-FROM node:14.18.1
+FROM node:13.12.0-alpine
 
 WORKDIR /model-app
+ENV PATH = "./node_modules/.bin:$PATH"
 
 COPY package.json package.json
 COPY package-lock.json package-lock.json
@@ -9,6 +10,7 @@ RUN npm install
 
 COPY ./frontend/package.json ./frontend/package.json
 COPY ./frontend/package-lock.json ./frontend/package-lock.json
+
 RUN cd frontend && npm install
 
 RUN cd ..
