--- a/model_app/package.json
+++ b/model_app/package.json
@@ -10,7 +10,8 @@
     "client": "npm start --prefix frontend",
     "client-install": "cd frontend && npm i",
     "dev": "cd frontend && npm start",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "cd frontend && npm start"
   },
   "author": "",
   "license": "ISC",
