--- a/model_app/package.json
+++ b/model_app/package.json
@@ -18,7 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.5.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "classnames": "^2.3.1",
