--- a/model_app/package.json
+++ b/model_app/package.json
@@ -31,5 +31,10 @@
     "react-scripts": "^4.0.3",
     "react-social": "^1.10.0",
     "react-unity-webgl": "^8.5.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/eslint-parser": "^7.18.9",
+    "eslint": "^8.21.0"
   }
 }
