--- a/model_app/package.json
+++ b/model_app/package.json
@@ -32,7 +32,6 @@
     "react-day-picker": "^7.4.10",
     "react-dropdown-select": "^4.7.4",
     "react-scripts": "^5.0.1",
-    "react-social": "^1.10.0",
-    "react-unity-webgl": "^9.0.4"
+    "react-social": "^1.10.0"
   }
 }
