--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -24,7 +24,9 @@
     "react-material-ui-carousel": "^2.3.5",
     "react-redux": "^7.2.6",
     "react-scripts": "^4.0.3",
+    "react-social": "^1.10.0",
     "react-transition-group": "^4.4.2",
+    "react-unity-webgl": "^9.3.0",
     "reactstrap": "^8.10.1",
     "recharts": "^2.1.12",
     "redux": "^4.1.1",
