--- a/model_app/package.json
+++ b/model_app/package.json
@@ -24,13 +24,15 @@
     "@material-ui/icons": "^4.11.2",
     "classnames": "^2.3.1",
     "concurrently": "^6.3.0",
+    "leaflet": "1.7.1",
     "prettier": "^2.7.1",
     "react-bootstrap": "^1.6.4",
     "react-day-picker": "^7.4.10",
     "react-dropdown-select": "^4.7.4",
     "react-scripts": "^4.0.3",
     "react-social": "^1.10.0",
-    "react-unity-webgl": "^8.5.1"
+    "react-unity-webgl": "^8.5.1",
+    "react-leaflet": "3.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
