--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "font-awesome": "^4.7.0",
     "google-map-react": "^2.1.10",
+    "leaflet": "1.7.1",
     "material-ui-popup-state": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -25,6 +26,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "^5.0.1",
     "react-social": "^1.10.0",
+    "react-leaflet": "3.2.5",
     "react-transition-group": "^4.4.2",
     "react-unity-webgl": "^9.3.0",
     "reactstrap": "^8.10.1",
@@ -45,18 +47,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "proxy": "http://localhost:5000/",
   "devDependencies": {
     "react-router-dom": "^5.3.0"
