--- a/model_app/package.json
+++ b/model_app/package.json
@@ -1,12 +1,12 @@
 {
   "name": "model_app",
   "version": "1.0.0",
-  "description": "The Delineo Disease Website",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "npm start --prefix backend",
-    "server-instalFl": "cd backend && npm i",
+    "server-install": "cd backend && npm i",
     "client": "npm start --prefix frontend",
     "client-install": "cd frontend && npm i",
     "dev": "cd frontend && npm start",
