Search function. TODO: reverse geocoding API

--- a/model_app/frontend/package.json
+++ b/model_app/frontend/package.json
@@ -17,16 +17,17 @@
     "font-awesome": "^4.7.0",
     "google-map-react": "^2.1.10",
     "leaflet": "1.7.1",
+    "leaflet-geosearch": "3.2.1",
     "material-ui-popup-state": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "3.2.5",
     "react-material-ui-carousel": "^2.3.5",
     "react-redux": "^7.2.6",
     "react-scripts": "^5.0.1",
     "react-social": "^1.10.0",
-    "react-leaflet": "3.2.5",
     "react-transition-group": "^4.4.2",
     "react-unity-webgl": "^9.3.0",
     "reactstrap": "^8.10.1",
