--- a/model_app/package.json
+++ b/model_app/package.json
@@ -11,6 +11,7 @@
     "client-install": "cd frontend && npm i",
     "dev": "cd frontend && npm start",
     "build": "webpack",
+    "react-build": "cd frontend && npm run build",
     "start": "cd frontend && npm start",
     "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
   },
